<resources>
    <string name="app_name">Yandex_mobilization2017</string>
    <string name="voice">Ввести тект голосом</string>
    <string name="sound">Проговорить тектс</string>
    <string name="favourites">Добавить в избранное</string>
    <string name="share">Поделиться</string>
    <string name="full_screen">На полный экран</string>
    <string name="hello_blank_fragment">Основная</string>
    <string name="text_EditText">Введите текст</string>
    <string name="Lang_lastItems">Недавно использованные</string>
    <string name="Lang_textView">Все языки</string>
    <string name="Lang_Act">Язык текста</string>
    <string name="Lang_Act2">Язык перевода</string>
    <string-array name="all_leng2">
        <item>af</item>
        <item>am</item>
        <item>ar</item>
        <item>az</item>
        <item>ba</item>
        <item>be</item>
        <item>bg</item>
        <item>bn</item>
        <item>bs</item>
        <item>ca</item>
        <item>ceb</item>
        <item>cs</item>
        <item>cy</item>
        <item>da</item>
        <item>de</item>
        <item>el</item>
        <item>en</item>
        <item>eo</item>
        <item>es</item>
        <item>et</item>
        <item>eu</item>
        <item>fa</item>
        <item>fi</item>
        <item>fr</item>
        <item>ga</item>
        <item>gd</item>
        <item>gl</item>
        <item>gu</item>
        <item>he</item>
        <item>hi</item>
        <item>hr</item>
        <item>ht</item>
        <item>hu</item>
        <item>hy</item>
        <item>id</item>
        <item>is</item>
        <item>it</item>
        <item>ja</item>
        <item>jv</item>
        <item>ka</item>
        <item>kk</item>
        <item>km</item>
        <item>kn</item>
        <item>ko</item>
        <item>ky</item>
        <item>la</item>
        <item>lb</item>
        <item>lo</item>
        <item>lt</item>
        <item>lv</item>
        <item>mg</item>
        <item>mhr</item>
        <item>mi</item>
        <item>mk</item>
        <item>ml</item>
        <item>mn</item>
        <item>mr</item>
        <item>mrj</item>
        <item>ms</item>
        <item>mt</item>
        <item>my</item>
        <item>ne</item>
        <item>nl</item>
        <item>no</item>
        <item>pa</item>
        <item>pap</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>si</item>
        <item>sk</item>
        <item>sl</item>
        <item>sq</item>
        <item>sr</item>
        <item>su</item>
        <item>sv</item>
        <item>sw</item>
        <item>ta</item>
        <item>te</item>
        <item>tg</item>
        <item>th</item>
        <item>tl</item>
        <item>tr</item>
        <item>tt</item>
        <item>udm</item>
        <item>uk</item>
        <item>ur</item>
        <item>uz</item>
        <item>vi</item>
        <item>xh</item>
        <item>yi</item>
    </string-array>
    <string-array name="favourites">
        <item>Английский</item>
        <item>Немецкий</item>
        <item>Русский</item>
    </string-array>
    <string-array name="all_leng">
        <item>Африкаанс</item>
        <item>Амхарский</item>
        <item>Арабский</item>
        <item>Азербайджанский</item>
        <item>Башкирский</item>
        <item>Белорусский</item>
        <item>Болгарский</item>
        <item>Бенгальский</item>
        <item>Боснийский</item>
        <item>Каталанский</item>
        <item> Себуанский</item>
        <item>Чешский</item>
        <item>Валлийский</item>
        <item>Датский</item>
        <item>Немецкий</item>
        <item>Греческий</item>
        <item>Английский</item>
        <item>Эсперанто</item>
        <item>Испанский</item>
        <item>Эстонский</item>
        <item>Баскский</item>
        <item>Персидский</item>
        <item>Финский</item>
        <item>Французский</item>
        <item>Ирландский</item>
        <item>Шотландский (гэльский)</item>
        <item>Галисийский</item>
        <item>Гуджарати</item>
        <item>Иврит</item>
        <item>Хинди</item>
        <item>Хорватский</item>
        <item>Гаитянский</item>
        <item>Венгерский</item>
        <item>Армянский</item>
        <item>Индонезийский</item>
        <item>Исландский</item>
        <item>Итальянский</item>
        <item>Японский</item>
        <item>Яванский</item>
        <item>Грузинский</item>
        <item>Казахский</item>
        <item>Кхмерский</item>
        <item>Каннада</item>
        <item>Корейский</item>
        <item>Киргизский</item>
        <item>Латынь</item>
        <item>Люксембургский</item>
        <item>Лаосский</item>
        <item>Литовский</item>
        <item>Латышский</item>
        <item>Малагасийский</item>
        <item> Марийский</item>
        <item>Маори</item>
        <item>Македонский</item>
        <item>Малаялам</item>
        <item>Монгольский</item>
        <item>Маратхи</item>
        <item> Горномарийский</item>
        <item>Малайский</item>
        <item>Мальтийский</item>
        <item>Бирманский</item>
        <item>Непальский</item>
        <item>Голландский</item>
        <item>Норвежский</item>
        <item>Панджаби</item>
        <item> Папьяменто</item>
        <item>Польский</item>
        <item>Португальский</item>
        <item>Румынский</item>
        <item>Русский</item>
        <item>Сингальский</item>
        <item>Словацкий</item>
        <item>Словенский</item>
        <item>Албанский</item>
        <item>Сербский</item>
        <item>Сунданский</item>
        <item>Шведский</item>
        <item>Суахили</item>
        <item>Тамильский</item>
        <item>Телугу</item>
        <item>Таджикский</item>
        <item>Тайский</item>
        <item>Тагальский</item>
        <item>Турецкий</item>
        <item>Татарский</item>
        <item> Удмуртский</item>
        <item>Украинский</item>
        <item>Урду</item>
        <item>Узбекский</item>
        <item>Вьетнамский</item>
        <item>Коса</item>
        <item>Идиш</item>

    </string-array>

    <string name="action_settings">Settings</string>
    <string name="Choose">Язык переводов</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
